// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a contract address 1`] = `
AztecAddress {
  "buffer": {
    "data": [
      19,
      214,
      237,
      52,
      255,
      193,
      96,
      208,
      71,
      72,
      142,
      228,
      29,
      46,
      49,
      167,
      188,
      108,
      220,
      93,
      115,
      183,
      98,
      183,
      131,
      97,
      82,
      117,
      149,
      222,
      179,
      38,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 587703305517770651443581700965463419402329990676290745771558099600379869110n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 4770137267635340238936684438938677677008644559659285829069143955098638667204n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 14183899854343735726273072423861389595545367822703803926156437266914765787587n,
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
Object {
  "data": Array [
    3,
    215,
    112,
    230,
    112,
    168,
    8,
    190,
    95,
    206,
    52,
    172,
    46,
    85,
    55,
    190,
    134,
    187,
    169,
    57,
    109,
    253,
    250,
    109,
    224,
    150,
    49,
    156,
    32,
    17,
    205,
    37,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    33,
    107,
    243,
    123,
    164,
    230,
    220,
    33,
    213,
    83,
    67,
    156,
    43,
    207,
    240,
    240,
    137,
    9,
    240,
    239,
    157,
    107,
    253,
    155,
    129,
    77,
    65,
    10,
    146,
    45,
    240,
    246,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
Fr {
  "value": 7216897321497646146262929975092090377195732654088850742428710375667397735848n,
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 9345528897854886901425240900308314448140117954647301972424901463671583707108n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 21448205167543230965497174487839242577166442986906145146692025203667817558560n,
}
`;
